--- a/app/src/main/res/layout/activity_create_workout.xml
+++ b/app/src/main/res/layout/activity_create_workout.xml
@@ -24,4 +24,10 @@
         android:layout_height="wrap_content"
         android:text="Add Exercise"/>
 
+    <Button
+        android:id="@+id/btn_submit_workout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="Submit Workout"/>
+
 </LinearLayout>
